--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+autopep8==2.0.1
+black==22.12.0
+click==8.1.3
 leetnode==1.0.3
+mypy-extensions==0.4.3
+pathspec==0.10.3
+platformdirs==2.6.0
+pycodestyle==2.10.0
+tomli==2.0.1
